src-tauri/error2.log
    Checking genzo-kit v1.0.0 (D:\learn\genzo-kit\src-tauri)
error[E0433]: failed to resolve: could not find `functions` in `rusqlite`
   --> src\lib.rs:379:27
    |
379 |                 rusqlite::functions::FunctionFlags::SQLITE_UTF8 | rusqlite::functions::FunctionFlags::SQLITE_DETERMINISTIC,
    |                           ^^^^^^^^^ could not find `functions` in `rusqlite`
    |
note: found an item that was configured out
   --> C:\Users\ntrun\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\rusqlite-0.31.0\src\lib.rs:114:9
    |
112 | #[cfg(feature = "functions")]
    |       --------------------- the item is gated behind the `functions` feature
113 | #[cfg_attr(docsrs, doc(cfg(feature = "functions")))]
114 | pub mod functions;
    |         ^^^^^^^^^

error[E0433]: failed to resolve: could not find `functions` in `rusqlite`
   --> src\lib.rs:379:77
    |
379 |                 rusqlite::functions::FunctionFlags::SQLITE_UTF8 | rusqlite::functions::FunctionFlags::SQLITE_DETERMINISTIC,
    |                                                                             ^^^^^^^^^ could not find `functions` in `rusqlite`
    |
note: found an item that was configured out
   --> C:\Users\ntrun\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\rusqlite-0.31.0\src\lib.rs:114:9
    |
112 | #[cfg(feature = "functions")]
    |       --------------------- the item is gated behind the `functions` feature
113 | #[cfg_attr(docsrs, doc(cfg(feature = "functions")))]
114 | pub mod functions;
    |         ^^^^^^^^^

error[E0599]: no method named `create_scalar_function` found for struct `Connection` in the current scope
   --> src\lib.rs:376:18
    |
376 |             conn.create_scalar_function(
    |             -----^^^^^^^^^^^^^^^^^^^^^^ method not found in `Connection`

error[E0282]: type annotations needed
   --> src\lib.rs:380:23
    |
380 |                 move |ctx| {
    |                       ^^^
381 |                     let text = ctx.get::<String>(1)?;
    |                                --- type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
380 |                 move |ctx: /* Type */| {
    |                          ++++++++++++

error[E0282]: type annotations needed
   --> src\lib.rs:384:24
    |
384 |             ).map_err(|e| e.to_string())?;
    |                        ^  - type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
384 |             ).map_err(|e: /* Type */| e.to_string())?;
    |                         ++++++++++++

Some errors have detailed explanations: E0282, E0433, E0599.
For more information about an error, try `rustc --explain E0282`.
error: could not compile `genzo-kit` (lib) due to 5 previous errors
